# stratus

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yaml  release.yaml
crates/stratus-cli/: Cargo.toml  build.rs
crates/stratus-cli/src/: apply.rs  connect.rs  delete.rs  dump.rs  get.rs  instance.rs  main.rs  output.rs  status.rs
crates/stratus-cli/tests/: apply.rs  delete.rs  get.rs  status.rs
crates/stratus-images/: Cargo.toml
crates/stratus-images/src/: cache.rs  download.rs  lib.rs  verify.rs
crates/stratus-images/tests/: cache.rs  download.rs  verify.rs
crates/stratus-net/: Cargo.toml
crates/stratus-resources/: Cargo.toml
crates/stratus-resources/src/: ip.rs  lib.rs  types.rs  validate.rs  yaml.rs
crates/stratus-resources/tests/: ip.rs  types.rs  validate.rs  yaml.rs
crates/stratus-services/: Cargo.toml
crates/stratus-store/: Cargo.toml
crates/stratus-store/src/: lib.rs  schema.rs  store.rs  watch.rs
crates/stratus-store/tests/: store.rs
crates/stratus-vm/: Cargo.toml
crates/stratus-vm/src/: disk.rs  firmware.rs  host.rs  lib.rs  lifecycle.rs  qemu.rs  qmp.rs  tap.rs
crates/stratus-vm/tests/: disk.rs  errors.rs  firmware.rs  host.rs  lifecycle.rs  qemu.rs  qmp.rs  tap.rs
crates/stratusd/: Cargo.toml  build.rs
crates/stratusd/src/: config.rs  lib.rs  main.rs  server.rs  vm_manager.rs
crates/stratusd/tests/: daemon.rs
examples/simple/: image.yaml  instance.yaml  network.yaml
proto/stratus/v1/: resources.proto  service.proto  status.proto  store.proto
systemd/: stratusd.service  stratusd.socket
