[workspace]
resolver = "2"
members = [
    "crates/stratusd",
    "crates/stratus-cli",
    "crates/stratus-store",
    "crates/stratus-vm",
    "crates/stratus-net",
    "crates/stratus-services",
    "crates/stratus-images",
    "crates/stratus-resources",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
tokio-stream = "0.1"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
redb = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
libbpf-rs = "0.24"
hickory-server = "0.25"
hickory-resolver = "0.25"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = "0.1"
nix = { version = "0.29", features = ["net", "ioctl", "socket", "process", "signal"] }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
ipnet = { version = "2", features = ["serde"] }
