[package]
name = "stratus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "stratus"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }

[dev-dependencies]
stratusd = { path = "../stratusd" }
tempfile = "3"
tokio-stream = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
