[package]
name = "stratus-resources"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
ipnet = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
