[package]
name = "stratus-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
stratus-resources = { path = "../stratus-resources" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
