[package]
name = "stratus-vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
stratus-resources = { path = "../stratus-resources" }

[dev-dependencies]
tempfile = "3"
