[package]
name = "stratusd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = "3"
hyper-util = { workspace = true }
tower = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
