[package]
name = "stratusd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
stratus-store = { path = "../stratus-store" }
stratus-resources = { path = "../stratus-resources" }
stratus-images = { path = "../stratus-images" }
stratus-vm = { path = "../stratus-vm" }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
hyper-util = { workspace = true }
tower = { workspace = true }
axum = "0.8"
sha2 = { workspace = true }
stratus-images = { path = "../stratus-images" }
stratus-vm = { path = "../stratus-vm" }

[build-dependencies]
tonic-build = { workspace = true }
